RESOLVED FIXED78088
REGRESSION(r84194): Build fails when turning on ENABLE_FILE_SYSTEM
https://bugs.webkit.org/show_bug.cgi?id=78088
Summary REGRESSION(r84194): Build fails when turning on ENABLE_FILE_SYSTEM
Leo Yang
Reported 2012-02-08 01:28:03 PST
undefined function getDOMObjectWrapper in JSEntryCustom.cpp and JSEntrySyncCustom.cpp. This is due to r84194
Attachments
Patch (3.37 KB, patch)
2012-02-08 01:44 PST, Leo Yang
no flags
Leo Yang
Comment 1 2012-02-08 01:44:59 PST
Antonio Gomes
Comment 2 2012-02-08 07:31:56 PST
Comment on attachment 126028 [details] Patch no one is building with this macro to catch this?
WebKit Review Bot
Comment 3 2012-02-08 16:04:26 PST
Comment on attachment 126028 [details] Patch Clearing flags on attachment: 126028 Committed r107146: <http://trac.webkit.org/changeset/107146>
WebKit Review Bot
Comment 4 2012-02-08 16:04:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.