REGRESSION(r84194): Build fails when turning on ENABLE_FILE_SYSTEM https://bugs.webkit.org/show_bug.cgi?id=78088

Reviewed by Antonio Gomes.

WebCore::getDOMObjectWrapper was changed to WebCore::wrap in r84194.
Adapt to this change in JSEntryCustom.cpp and JSEntrySyncCustom.cpp.

Build fix, no new tests.

* bindings/js/JSEntryCustom.cpp:
(WebCore::toJS):
* bindings/js/JSEntrySyncCustom.cpp:
(WebCore::toJS):


Canonical link: https://commits.webkit.org/95055@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107146 268f45cc-cd09-0410-ab3c-d52691b4dbfc