Source/WebCore/bindings/js/JSEntrySyncCustom.cpp
@@ -50,10 +50,10 @@ JSValue toJS(ExecState* exec, JSDOMGlobalObject* globalObject, EntrySync* entry)
         return jsNull();
 
     if (entry->isFile())
-        return getDOMObjectWrapper<JSFileEntrySync>(exec, globalObject, static_cast<FileEntrySync*>(entry));
+        return wrap<JSFileEntrySync>(exec, globalObject, static_cast<FileEntrySync*>(entry));
 
     ASSERT(entry->isDirectory());
-    return getDOMObjectWrapper<JSDirectoryEntrySync>(exec, globalObject, static_cast<DirectoryEntrySync*>(entry));
+    return wrap<JSDirectoryEntrySync>(exec, globalObject, static_cast<DirectoryEntrySync*>(entry));
 }
 
 } // namespace WebCore
